# NiChart_Viewer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
NiChartGUI/: __init__.py  __main__.py  aboutdialog.ui  mainwindow.py  mainwindow.ui
NiChartGUI/core/: baseplugin.py  datautils.py  iStagingLogger.py
NiChartGUI/core/gui/: CheckableQComboBox.py  NestedCheckableQComboBox.py  QColorTable.py
NiChartGUI/core/model/: cmdmodel.py  datamodel.py
NiChartGUI/plugins/adjcovview/: adjcovview.py  adjcovview.ui  adjcovview.yapsy-plugin
NiChartGUI/plugins/distview/: distview.py
NiChartGUI/plugins/dsetview/: dsetview.py  dsetview.ui  dsetview.yapsy-plugin
NiChartGUI/plugins/filterview/: filterview.py
NiChartGUI/plugins/harmonizetrainview/: harmonizetrainview.py  harmonizetrainview.ui  harmonizetrainview.yapsy-plugin
NiChartGUI/plugins/harmonizeview/: harmonizeview.py  harmonizeview.ui  harmonizeview.yapsy-plugin
NiChartGUI/plugins/mergeview/: mergeview.py  mergeview.ui
NiChartGUI/plugins/plotview/: plotview.py  plotview.ui
NiChartGUI/plugins/spareview/: spareview.py  spareview.ui  spareview.yapsy-plugin
NiChartGUI/plugins_tmp/dsetview/: dsetview.py  dsetview.ui
NiChartGUI/plugins_tmp/normalizeview/: normalizeview.py  normalizeview.ui
NiChartGUI/plugins_tmp/plotview/: plotview.py
NiChartGUI/plugins_tmp/spareview/: spareview.py  spareview.yapsy-plugin
NiChartGUI/resources/: QtBrainChartGUI.qrc
NiChart_Viewer/: NiChartGUICmdApp.py  __init__.py  __main__.py  aboutdialog.py  aboutdialog.ui  cmds_test.txt  mainwindow.py  mainwindow.ui
NiChart_Viewer/core/: baseplugin.py  dataio.py  datautils.py  iStagingLogger.py  plotcanvas.py
NiChart_Viewer/core/gui/: CheckableQComboBox.py  NestedCheckableQComboBox.py  NestedQMenu.py  SearchableQComboBox.py
NiChart_Viewer/core/model/: cmdmodel.py  datamodel.py
NiChart_Viewer/plugins/adjcovview/: adjcovview.py  adjcovview.ui
NiChart_Viewer/plugins/centileview/: centileview.py  centileview.ui  centileview.yapsy-plugin
NiChart_Viewer/plugins/dsetview/: dsetview.py  dsetview.yapsy-plugin
NiChart_Viewer/plugins/harmonizeview/: harmonizeview.py  harmonizeview.ui  harmonizeview.yapsy-plugin
NiChart_Viewer/plugins/icvcorrview/: icvcorrview.py  icvcorrview.ui  icvcorrview.yapsy-plugin
NiChart_Viewer/plugins/mergeview/: mergeview.py  mergeview.yapsy-plugin
NiChart_Viewer/plugins/plotview/: plotview.py  plotview.ui  plotview.yapsy-plugin  plotview2.ui
NiChart_Viewer/plugins/spareview/: spareview.ui
NiChart_Viewer/shared/dictionaries/: ISTAG_DataDict_v1_IMG.csv  ISTAG_DataDict_v1_NON-IMG.csv
NiChart_Viewer/shared/dictionaries/dicts_dlmuse/Prep/: MUSE_ROI_Names.csv
NiChart_Viewer/shared/dictionaries/dicts_muse_istag/: MUSE_ROI_Dictionary.csv
docs/: buildDocs.sh  conf.py  index.rst
docs/contents/: datapreprocessing.rst  development.rst  userguide.rst
examples/IXI_ROIs/: run_nichart_viewer_IXI.sh
shared/dictionaries/dicts_dlmuse/Prep/: MUSE_ROI_Hierarchy_Levels_V2.2.csv  MUSE_ROI_Names_V2.1.csv  MUSE_ROI_Names_V2.2.csv
testing/: test_dataio.py  test_plotcanvas.py  test_spares.py  tmp_test1.sh
